[package]
name = "odds"
version = "0.2.16"
authors = ["bluss"]
license = "MIT/Apache-2.0"

description = "Odds and ends — collection miscellania. Extra functionality for slices, strings and other things. Odds for example provides debug checked variants of `get_unchecked` and `slice_unchecked`, and extra methods for strings and vectors: `repeat`, `insert_str` and `splice`. Things in odds may move to more appropriate crates if we find them."
documentation = "http://bluss.github.io/arrayvec/doc/odds"
repository = "https://github.com/bluss/odds"

keywords = ["data-structure", "unchecked", "debug-assert", "fix-combinator", "no_std"]

[dependencies]

[dev-dependencies]
itertools = "0.4"

[features]
default = ["std"]
# Default
# Use libstd
std = []
unstable = []
