[package]
name = "odds"
version = "0.3.1"
authors = ["bluss"]
license = "MIT/Apache-2.0"

description = """
Odds and ends — collection miscellania. Extra functionality for slices (`.find()`, `RevSlice`), strings and other things. Things in odds may move to more appropriate crates if we find them.
"""
documentation = "https://docs.rs/odds/"
repository = "https://github.com/bluss/odds"

keywords = ["data-structure", "debug-assert", "slice", "string", "no_std"]
categories = ["no-std"]

[dependencies]
rawpointer = "0.1.0"
rawslice = "0.1.0"
unchecked-index = "0.2.2"

[dev-dependencies]
itertools = "0.7.2"
memchr = "2.0"
lazy_static = "0.2.2"
quickcheck = { version = "0.4.1", default-features = false }

[features]
default = []

std-string = ["std"]
std-vec = ["std"]
std = []

unstable = []

docs = ["std-string", "std-vec"]

[package.metadata.docs.rs]
features = ["docs"]

[package.metadata.release]
no-dev-version = true

